--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MayDayAssessment"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity">
+            android:name=".ui.MainActivity">
 
         </activity>
         <activity android:name=".ui.LoginActivity"
