完成数据库基本搭建

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity android:name=".ui.FeedBackActivity">
 
         </activity>
+        <activity android:name=".ui.AddTaskActivity">
+
+        </activity>
     </application>
 
 </manifest>
