--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity android:name=".ui.AddTaskActivity">
 
         </activity>
+        <activity android:name=".ui.PointActivity">
+
+        </activity>
     </application>
 
 </manifest>
