实现积分中心

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity android:name=".ui.AddTaskActivity">
 
         </activity>
-        <activity android:name=".ui.PointActivity">
+        <activity android:name=".ui.PointActivity"
+            android:launchMode="singleTop">
 
         </activity>
     </application>
