实现积分中心

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         </activity>
         <activity android:name=".ui.PointActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTask">
 
         </activity>
     </application>
